[gd_scene load_steps=4 format=2]

[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=1]
[ext_resource path="res://images/boxes/type1/2_1.png" type="Texture2D" id=2]
[ext_resource path="res://mocraAdventure/map_editor/dialog/life_dialog.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -780.0
custom_minimum_size = Vector2( 400, 200 )
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="backgroundSprite" type="Sprite2D" parent="."]
scale = Vector2( 1, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 200, 100 )

[node name="titleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 12.0
offset_right = 284.0
offset_bottom = 97.0
scale = Vector2( 0.5, 0.5 )
text = "Life editor"

[node name="maxLifeLabel" type="Label" parent="."]
offset_left = 11.0
offset_top = 81.0
offset_right = 319.0
offset_bottom = 166.0
scale = Vector2( 0.5, 0.5 )
text = "Max life:"

[node name="maxLifeSpinBox" type="SpinBox" parent="maxLifeLabel"]
offset_left = 350.0
offset_top = 6.0
offset_right = 738.0
offset_bottom = 91.0
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 100.0
align = 1
suffix = "pv"

[node name="DefLifeLabel" type="Label" parent="."]
offset_left = 11.0
offset_top = 134.0
offset_right = 319.0
offset_bottom = 219.0
scale = Vector2( 0.5, 0.5 )
text = "Def life:"

[node name="DefLifeSpinBox" type="SpinBox" parent="DefLifeLabel"]
offset_left = 350.0
offset_top = 6.0
offset_right = 738.0
offset_bottom = 91.0
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 100.0
align = 1
suffix = "pv"

[node name="editButton" type="Button" parent="."]
offset_left = 92.0
offset_top = 206.0
offset_right = 563.0
offset_bottom = 320.0
scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
theme_type_variation = "button_green"
text = "Edit Values"

[node name="leaveButton" type="Button" parent="."]
offset_left = 331.0
offset_top = 13.0
offset_right = 438.0
offset_bottom = 98.0
scale = Vector2( 0.5, 0.5 )
theme_type_variation = "button_red"
text = "X"

[connection signal="value_changed" from="maxLifeLabel/maxLifeSpinBox" to="." method="_on_maxLifeSpinBox_value_changed"]
[connection signal="value_changed" from="DefLifeLabel/DefLifeSpinBox" to="." method="_on_DefLifeSpinBox_value_changed"]
[connection signal="pressed" from="editButton" to="." method="_on_editButton_pressed"]
[connection signal="pressed" from="leaveButton" to="." method="_on_leaveButton_pressed"]
